some changes; add new link

--- a/app/views/header/_header.html.erb
+++ b/app/views/header/_header.html.erb
@@ -8,4 +8,7 @@
   <li>
     <%= link_to 'Контроль просмотра фильмов', 'http://films.ai-factory.com' %>
   </li>
+  <li>
+    <%= link_to 'Фиды социальных сетей', 'http://feed.ai-factory.com' %>
+  </li>
 </ul>
